--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-geocode": "^0.2.3",
     "react-leaflet": "^3.2.1",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
